--- a/src/mergepage.css
+++ b/src/mergepage.css
@@ -10,6 +10,11 @@
   height: 120px;
   width: 120px;
   background-color: #D8D8D8;
+  display: inline-block;
+  margin: 5px;
+  vertical-align: middle;
+
+
 }
 
 .leftside2 {
@@ -25,4 +30,55 @@
 
 .instr {
 	padding-top: 20px;
+}
+
+.popup {
+	height: 300px;
+	width:  300px;
+	background-color: #D8D8D8;
+	display: flex;
+	flex-direction: column;
+}
+
+.cancelbutton {
+	height: 20px;
+	width: 20px;
+	color: black;
+	border-radius: 10px;
+	align-items: center;
+	justify-content: center;
+	display: inline-block;
+	position: relative; 
+	left: 5px;
+
+}
+
+.popupimage {
+	height: 200px;
+	width: 200px;
+	padding: 5px;
+}
+
+
+.favoritebutton {
+	background-color: black;
+	height: 20px;	
+	width:  100px;
+	color: white;
+
+}
+
+.explorebutton {
+	background-color: black;
+	height: 20px;	
+	width:  100px;
+	color: white;
+
+}
+
+.popuprow {
+	direction: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	
 }
