--- a/src/mergepage.css
+++ b/src/mergepage.css
@@ -17,9 +17,6 @@
 
 }
 
-.leftside2 {
-	overflow-y: scroll;
-}
 
 .row3 {
 	display: flex;
@@ -32,47 +29,75 @@
 	padding-top: 20px;
 }
 
+.history {
+  margin-top: 10px;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  padding-left: 5px;
+  background-color: white;
+  height: 150px;
+  width: 530px;
+  align-items: center;
+  border-radius: 12px;
+
+
+} 
+
+
 .popup {
-	height: 300px;
-	width:  300px;
-	background-color: #D8D8D8;
+	height: 650px;
+	width:  550px;
+	background-color: white;
 	display: flex;
 	flex-direction: column;
+	z-index: 2;
+	position: absolute;
+	align-items: center;
+	right: 600px;
+	border: .8px solid grey;
 }
 
 .cancelbutton {
-	height: 20px;
-	width: 20px;
-	color: black;
-	border-radius: 10px;
-	align-items: center;
-	justify-content: center;
-	display: inline-block;
-	position: relative; 
-	left: 5px;
+	height: 30px;
+	width: 30px;
+	border-radius: 30px;
+	position: absolute;
+	right: 0px;
+	margin: 4px;
+	top: 2px;
+	border: none;
+	background: none;
+	font-size: 23px;
+	color: grey;
 
 }
 
 .popupimage {
-	height: 200px;
-	width: 200px;
+	margin-top: 35px;
+	height: 550px;
+	width: 550px;
 	padding: 5px;
+
 }
 
 
 .favoritebutton {
-	background-color: black;
-	height: 20px;	
-	width:  100px;
+    background-color: #597EF7;
+    font-size: 13px;
+	height: 40px;	
+	width:  180px;
 	color: white;
+	border-radius: 20px;
 
 }
 
 .explorebutton {
 	background-color: black;
-	height: 20px;	
-	width:  100px;
+	height: 40px;	
+	width:  140px;
 	color: white;
+	border-radius: 20px;
+	margin-left: 200px;
 
 }
 
@@ -80,5 +105,5 @@
 	direction: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	
+	margin-top: 5px;
 }
