--- a/src/secondpage.css
+++ b/src/secondpage.css
@@ -224,11 +224,21 @@
   display: inline-block;
   margin: 5px;
   vertical-align: middle;
-
-
 }
 
 
+
+/*grey squares ENLARGED*/
+.square2enlarged {
+  height: 500px;
+  width: 500px;
+  background-color: #D8D8D8;
+  display: inline-block;
+  margin: 5px;
+  vertical-align: middle;
+  position: absolute;
+  z-index: 10
+}
 
 /*white squares*/
 .square3 {
