--- a/src/secondpage.css
+++ b/src/secondpage.css
@@ -156,7 +156,7 @@
   flex-direction:row;
   justify-content: space-between;
   padding-right:50px;
-  padding-bottom: 5px;
+  padding-bottom: 0px;
 }
 
 .rightside2 {
@@ -251,6 +251,25 @@
 
 }
 
+.refreshbuttoncontainer {
+  align-items: center;
+  justify-content: center;
+
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 2px;
+  margin-top: 0px;
+
+
+}
+.refreshbutton {
+  height: 20px;
+  width: 70px;
+  border-radius: 10px;
+  position: relative;
+  right: 20px;
+
+}
 
 /*.row{
 	padding-top: 5px;
