--- a/src/App.css
+++ b/src/App.css
@@ -220,6 +220,17 @@
 
 }
 
+.text{
+  position: absolute;
+/*  left: 880px;
+  bottom: 190px;*/
+
+  bottom: 510px;
+  left: 310px;
+
+
+}
+
 .genbutton {
           color: white;
           height: 60px;
