--- a/src/secondpage.css
+++ b/src/secondpage.css
@@ -117,7 +117,7 @@
 }
 
 .posterrows{
-  padding-bottom: 40px;
+  padding-bottom: 2px;
   height:650px;
   overflow-y: scroll;
 }
@@ -150,6 +150,7 @@
 
 }
 
+/*download button*/
 .download {
   height: 22px;
   width: 40px;
@@ -158,6 +159,13 @@
   font-size: 15px;
   position: relative;
   left: 44.5px;
+  outline: none !important;
+  box-shadow: none;
+}
+
+.download:hover {
+  transform: scale(1.1);
+  transition: all 0.3s;
 }
 
 .colly {
@@ -169,9 +177,10 @@
 .instructions {
   font-family: arial;
   padding-top: 20px;
+  font-size: 18px;
 }
 
-
+/*Back button and transition mode button*/
 .button2 {
 	height: 53px;
 	width: 102px;
@@ -180,12 +189,48 @@
   border-radius: 75px;
   text-align: center;
   font-size: 14px;
+  outline: none !important;
+  box-shadow: none;
+  font-weight: lighter;
 }
 
 .button2:hover {
   transform: scale(1.1);
   transition: all 0.3s;
   
+}
+
+.refreshbuttoncontainer {
+  align-items: center;
+  justify-content: center;
+
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+  margin-top: 0px;
+
+
+}
+.refreshbutton {
+
+  height: 30px;
+  width: 100px;
+  background-color: #f4f4f4;
+  border-radius: 30px;
+  margin-top: 7px;
+  font-weight: lighter;
+  font-size: 14px;
+  position: relative;
+  left: 420px;
+  
+  outline: none !important;
+  box-shadow: none;
+
+}
+
+.refreshbutton:hover {
+  transform: scale(1.1);
+  transition: all 0.3s;
 }
 
 .row {
@@ -269,19 +314,6 @@
 }
 
 
-
-/*grey squares ENLARGED*/
-.square2enlarged {
-  height: 500px;
-  width: 500px;
-  background-color: #D8D8D8;
-  display: inline-block;
-  margin: 5px;
-  vertical-align: middle;
-  position: absolute;
-  z-index: 10
-}
-
 /*white squares*/
 .square3 {
   height: 120px;
@@ -293,25 +325,7 @@
 
 }
 
-.refreshbuttoncontainer {
-  align-items: center;
-  justify-content: center;
 
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 2px;
-  margin-top: 0px;
-
-
-}
-.refreshbutton {
-  height: 20px;
-  width: 70px;
-  border-radius: 10px;
-  position: relative;
-  right: 20px;
-
-}
 
 /*.row{
 	padding-top: 5px;
