--- a/src/secondpage.css
+++ b/src/secondpage.css
@@ -1,3 +1,11 @@
+.loading {
+  position: absolute;
+  left:230px;
+  top: 200px;
+  z-index: 10
+}
+
+
 .lrcontainer2 {
 	display: flex;
 	flex-direction: row;
