--- a/src/App.css
+++ b/src/App.css
@@ -315,7 +315,7 @@
 /*  padding-left: 50px;*/
 /*  margin-right: 40px;*/
   height: 100vh;
-  width: 25vw;
+  width: 400px;
   background-color: #D8D8D8;
   justify-content: center;
 
@@ -344,6 +344,7 @@
   font-family: arial;
   font-weight: bold;
   margin-bottom: 2vh;
+  margin-top: 0px;
   font-size: 25pt;
   position: relative;
   right: 75px;
