--- a/src/secondpage.css
+++ b/src/secondpage.css
@@ -16,7 +16,7 @@
 
 .littleloading2 {
   position: absolute;
-  left:1016px;
+  left:1035px;
   top: 415px;
   z-index: 10;
 
@@ -75,14 +75,14 @@
   position: absolute;
   z-index: 1;
   transform: rotate(-45deg);
-  left: 646px;
+  left: 666px;
   top: 36px;
 }
 
 .toptriangle {
   position: absolute;
   z-index: 1;
-  left: 1112px;
+  left: 1132px;
   top: 35px;
 }
 
@@ -90,7 +90,7 @@
   position: absolute;
   z-index: 1;
   transform: rotate(45deg);
-  left: 1571px;
+  left: 1591px;
   top: 36px;
 }
 
@@ -98,7 +98,7 @@
   position: absolute;
   z-index: 1;
   transform: rotate(-90deg);
-  left: 644px;
+  left: 665px;
   top: 496px;
 }
 
@@ -106,7 +106,7 @@
   position: absolute;
   z-index: 1;
   transform: rotate(90deg);
-  left: 1572px;
+  left: 1592px;
   top: 496px;
 }
 
@@ -114,7 +114,7 @@
   position: absolute;
   z-index: 1;
   transform: rotate(-135deg);
-  left: 651px;
+  left: 671px;
   top: 957px;
 }
 
@@ -122,7 +122,7 @@
   position: absolute;
   z-index: 1;
   transform: rotate(180deg);
-  left: 1112px;
+  left: 1132px;
   top: 959px;
 }
 
@@ -130,16 +130,16 @@
   position: absolute;
   z-index: 1;
   transform: rotate(-225deg);
-  left: 1569px;
+  left: 1589px;
   top: 957px;
 }
 
 .leftside2 {
   display: flex;
   padding-left: 40px;
+  padding-right: 20px;
   flex-direction: column;
-
-  height: 1015px;
+  height: 100vh;
   width: 560px;
   background-color: #D8D8D8;
 
@@ -149,6 +149,7 @@
   padding-bottom: 2px;
   height:650px;
   overflow-y: scroll;
+  margin-right: 10px;
 }
 
 
@@ -159,7 +160,7 @@
   padding-left: 5px;
   background-color: white;
   height: 170px;
-  width: 530px;
+  width: 550px;
   align-items: center;
   border-radius: 12px;
 } 
@@ -271,8 +272,10 @@
   display: flex;
   flex-direction:row;
   justify-content: space-between;
-  padding-right:50px;
+  padding-right:10px;
   padding-bottom:5px;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 .rightside2 {
@@ -302,7 +305,7 @@
 .complex {
   transform: rotate(-270deg);
   position: relative;
-  right: 2px;
+  right: 0px;
   top: 480px;
   height: 5px;
 }
@@ -315,6 +318,7 @@
 }
 
 .topflex {
+
   padding-bottom: 13px;
 	display: flex ;
 	flex-direction: row;
