--- a/src/secondpage.css
+++ b/src/secondpage.css
@@ -300,6 +300,7 @@
   right: 3px;
   top: 473px;
   height: 20px;
+  font-weight: bold;
 }
 
 .complex {
@@ -308,6 +309,7 @@
   right: 0px;
   top: 480px;
   height: 5px;
+  font-weight: bold;
 }
 
 .sideflex{
@@ -318,7 +320,7 @@
 }
 
 .topflex {
-
+  font-weight: bold;
   padding-bottom: 13px;
 	display: flex ;
 	flex-direction: row;
@@ -331,17 +333,20 @@
   display: flex ;
   flex-direction: row;
   justify-content: space-between;
+  font-weight: bold;
 
 }
 
 .soft {
   position: relative;
   left: 14px;
+  font-weight: bold;
 }
 
 .sharp {
   position: relative;
   right: 6px;
+  font-weight: bold;
 }
 
 .null {
