--- a/src/App.css
+++ b/src/App.css
@@ -295,7 +295,7 @@
   width: 300px;
   background-color: #597EF7;
   border-radius: 75px;
-  margin-top: 5vh;
+  margin-top: 5px;
   font-size: 23px;
   outline: none !important;
   box-shadow: none;
