--- a/src/secondpage.css
+++ b/src/secondpage.css
@@ -1,3 +1,11 @@
+#test{
+  position: absolute;
+  z-index: -1;
+  top:0;
+  left: 0;
+
+}
+
 .loading {
   position: absolute;
   left:230px;
@@ -10,6 +18,7 @@
   left:440px;
   top: 415px;
   z-index: 10;
+  display:  none;
 
 }
 
@@ -19,6 +28,7 @@
   left:1035px;
   top: 415px;
   z-index: 10;
+  display: none;
 
 }
 
@@ -355,7 +365,7 @@
 
 
 /*grey squares*/
-.square2 {
+.square2, .favsquare {
   height: 120px;
   width: 120px;
   background-color: #D8D8D8;
