--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-.format {
-/*
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  min-height: 100vh;*/
-} 
-
 #test {
   position: absolute;
   z-index: -1;
@@ -15,14 +5,20 @@
   left: 0px;
 }
 
-.App {
+.instructions {
+  font-family: arial;
+  font-size: 18px;
+  align-items: left;
+  text-align: left;
+  margin-left: 40px;
+  margin-top: 20px;
+}
 
+.App {
   text-align: left;
   display: flex;
   flex-direction: row;
   padding-left: 20px;
-
-
 }
 
 .App-logo {
@@ -40,35 +36,67 @@
   position: absolute;
   background-color: white;
   z-index: 10
-
-
 }
 
 .welcomeText {
 
-  margin-top: 30vh;
+  margin-top: 10vh;
   font-size: 90px;
 
 }
 
-.startbuttonstyle {
-  text-align: center; 
+.description {
+  width: 50vw;
+
 }
+
+
+
+.startbuttonstyle {
+  text-align: left; 
+  margin-left: 30px;
+}
+
+
+.clickToStartUnclicked {
+  margin-top: 15px;
+  margin-left:  5px;
+  margin-right: 20px;
+  height: 55px;
+  width: 170px;
+  border-radius: 30px;
+  background-color: #D8D8D8;
+  color: black;
+  font-size: 17px;
+  outline: none !important;
+  box-shadow: none;
+
+
+}
+
 .clickToStart {
-  margin-top: 7vh;
-  height: 100px;
-  width: 400px;
+  margin-top: 15px;
+  margin-left:  5px;
+  margin-right: 20px;
+  height: 55px;
+  width: 170px;
   border-radius: 30px;
   background-color: #597EF7;
   color: white;
-  font-size: 35px;
+  font-size: 17px;
   outline: none !important;
   box-shadow: none;
 
 }
 
-.clickToStart: hover {
-  transform: scale(1.2);
+.clickToStart:hover  {
+  transform: scale(1.1);
+  transition: all 0.3s;
+}
+
+.clickToStartUnclicked:hover  {
+  transform: scale(1.1);
+  transition: all 0.3s;
 }
 
 
@@ -168,7 +196,7 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  left: 100px;
+  left: 101px;
 }
 
 .buttongroup2 {
@@ -176,7 +204,7 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  left: 51px;
+  left: 47px;
 }
 
 .buttongroup3 {
@@ -387,3 +415,4 @@
 .insttwo {
   padding:  5px;
 }
+
